fixing iframe and card overflow

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -61,7 +61,7 @@ body {
   /* height: 100% !important;
   width: 100% !important; */
   position: relative;
-  /* overflow: scroll; */
+  overflow: scroll;
 
 }
 
